	+ Added ckEditor to write instructions;

	Bugfixes:
	------------------------
	+ Fixed overlay on second popup;
	+ Fixed IE search bug;
	+ Fixed support for non-standard ports;
	+ Fixed permitting overlapping subnets if vrfs are different;
	+ Fixed dates in logging appearing in 12h format;
	+ Fixed broken subnets link in tools > subnets if installation is not at document root;
	+ Fixed error when adding new subnet if checkboxes are not selected in newser MySQL servers;
	+ Fixed bad display of multilined navigation bar;

== 0.7

	New features:
	----------------------------	
	+ Completely rewritten UI using twitter's bootstrap as base;
	+ Using mod_rewrite apache module to handle GET requests (new install requitements!);
	+ Unlimited number of subnetting levels;
	+ OpenLDAP authentication support;
	+ New URL structure;
	+ Sorting of IP addresses;
	+ Custom subnet fields;
	+ Custom VLAN fields and admin option to allow duplicate VLAN names (metro area VLANs);
	+ Script to automatically update IP <-> hostname, run via cron (functions/scripts/resolveIPaddresses.php);
	+ Show Subnet name instead of subnet IP address option;
	+ Strict mode option in config files that controlls overlapping checks;
	+ New subnet menu;
	+ Added printLimit feature to break IP addresses into pages;
	
	Enhancements:
	----------------------------
	+ Lots of UI changes;
	+ Less Ajax usage to display websites and details;
	+ Hierarchy display under subnet details (breadcrumbs);
	+ Search results covering VLANs;
	+ Custom IP fields ordering;
	+ VLAN creation from adding/editing subnets;
	+ IP addresses can now be edited;
	+ Collapsed switch list;
	+ Removing VLANs also removes references from subnet list;
	+ Removing VRFs also removes references from subnet list;
	+ Logs for admin on dashboard;
	+ Search via GET;
	+ Support for range networks (allows use of subnet and broadcast as IP);
	+ Import of custom IP fields;
	+ Abiility to move subnets between sections;