@@ -26,8 +26,9 @@
 	+ Fixed permitting overlapping subnets if vrfs are different;
 	+ Fixed dates in logging appearing in 12h format;
 	+ Fixed broken subnets link in tools > subnets if installation is not at document root;
-	+ Fixed error when adding new subnet if checkboxes are not selected in newser MySQL servers;
+	+ Fixed error when adding new subnet if checkboxes are not selected in newer MySQL servers;
 	+ Fixed bad display of multilined navigation bar;
+	+ Fixed Wrong output of tools > VLAN list when using Duplicate VLANs;
 
 == 0.7
 
